--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -3,7 +3,8 @@
    "origin":"http://localhost:4200",
     "baseurl" : "https://stage.mycredible.info/Links/",
    "access_token":"links_local_access_token",
-   "user":"links_local_user"
+   "user":"links_local_user",
+   "assets_location": ""
 }
 
 ]
