--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/angular-jwt": "^3.0.0",
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@ckeditor/ckeditor5-build-classic": "^12.3.1",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@tinymce/tinymce-angular": "^4.2.0",
     "angular-confirmation-popover": "^6.0.0",
     "bootstrap": "^4.3.1",
